--- a/anybuy/base_template/sellerbase.html
+++ b/anybuy/base_template/sellerbase.html
@@ -20,7 +20,47 @@
 				$('.list-group-item')[5].className = "list-group-item active";
 		})
 </script>
-</br></br></br>
+
+<div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<ul class="nav nav-tabs">
+				<li class="active">
+					<a href="#"><h4 style="color:#3a87ad">Recommend Shop</h4></a>
+				</li>
+			</ul>
+			<div class="carousel slide" id="carousel-112879">
+{#				<ol class="carousel-indicators">#}
+{#					<li class="active" data-target="#carousel-112879" data-slide-to="0">#}
+{#					</li>#}
+{#					<li data-target="#carousel-112879" data-slide-to="1">#}
+{#					</li>#}
+{#					<li data-target="#carousel-112879" data-slide-to="2">#}
+{#					</li>#}
+{#				</ol>#}
+
+                <div class="carousel-inner">
+					{% for shop in shopadvlist %}
+					<div class="item">
+						<img alt="" src="/file/{{ shop.BigImage }}" />
+						<div class="carousel-caption">
+							<h4>
+								{{ shop.ShopName }}
+							</h4>
+							<p>
+								{{ shop.ShopDescription }}
+							</p>
+						</div>
+					</div>
+
+					{% endfor%}
+				</div>
+                <a class="left carousel-control" href="#carousel-112879" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-112879" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+			</div>
+         </div>
+     </div>
+</div>
+            </br></br></br></br></br>
  <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-2 column">
@@ -43,15 +83,39 @@
 	<div class="row clearfix">
 		<div class="col-md-4 column">
 		</div>
-       
+        <!--<div class="col-md-4 column">
+			<ul class="pagination">
+				<li>
+					<a href="#">Prev</a>
+				</li>
+				<li>
+					<a href="#">1</a>
+				</li>
+				<li>
+					<a href="#">2</a>
+				</li>
+				<li>
+					<a href="#">3</a>
+				</li>
+				<li>
+					<a href="#">4</a>
+				</li>
+				<li>
+					<a href="#">5</a>
+				</li>
+				<li>
+					<a href="#">Next</a>
+				</li>
+			</ul>
+		</div>-->
 		<div class="col-md-4 column">
 		</div>
 	</div>
  <hr>
- <div class="row clearfix">
+    <div class="row clearfix">
 		<div class="col-md-12 column">
         <h3 style="color:#3a87ad">
-       
+        Recommend commodity
         </h3>
         {% for commodity in commodityadvlist %}
             <a id="commodityadv{{ commodity.id }}" href="/commodity/id/{{ commodity.id }}">
