邮件验证模块可用，在Customer注册的时候，邮箱必须写个真实的，并登陆点击验证，否者无法登陆

--- a/anybuy/base_template/base.html
+++ b/anybuy/base_template/base.html
@@ -99,10 +99,17 @@
               <input type="text" id="keyword" class="form-control">
             </div>
             <script language="javascript">
+            /*删除两端的空格
+             function trimStr(str){return str.replace(/(^\s*)|(\s*$)/g,"");}
+             */
             function searchForCommodity() {
-            keyword = document.getElementById("keyword").value;
-            location.href='/search/'+keyword;
-            }
+             keyword = document.getElementById("keyword").value.replace(/\s/ig,'');
+ 
+             if(keyword=="")
+               alert("Search Content Should Not Be Empty!")
+             else
+               location.href='/search/'+keyword;
+              }
             </script>
             <button type="button" onclick="searchForCommodity()" id="search" class="btn btn-default">Search</button>
             </form>
