--- a/anybuy/base_template/base.html
+++ b/anybuy/base_template/base.html
@@ -75,17 +75,17 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             {% if UserType == 'C' %}
-              <li style="border-right: 1px solid #C0C0C0">
-                <a href="/favorite/">MyFavorite</a>
+              <li style="border-right: 1px solid #fff">
+                <a style="color:#fff" href="/favorite/">MyFavorite</a>
               </li>
               <li>
-                <a href="/cart/">MyCart</a>
+                <a style="color:#fff" href="/cart/">MyCart</a>
               </li>
               <li>
-                <a href="/customer/order" style = "color:#3299CC">ManageOrder</a>
+                <a href="/customer/order" style = "color:#fff">ManageOrder</a>
               </li>
                <li>
-                <a href="/customer/statistics/all" style = "color:#3299CC">BuyHistory</a>
+                <a href="/customer/statistics/all" style = "color:#fff">BuyHistory</a>
               </li>
             {% endif %}
             {% if UserType == 'S' %}
@@ -99,19 +99,33 @@
               <input type="text" id="keyword" class="form-control">
             </div>
             <script language="javascript">
-            function searchForCommodity() {
-            keyword = document.getElementById("keyword").value;
-            location.href='/search/'+keyword;
-            }
+            /*删除两端的空格
+             function trimStr(str){return str.replace(/(^\s*)|(\s*$)/g,"");}
+             */
+              function searchForCommodity() {
+             keyword = document.getElementById("keyword").value;
+             //location.href='search/'+keyword;
+            //删除所有的空格
+             keyword = document.getElementById("keyword").value.replace(/\s/ig,'');
+ 
+                if(keyword==""){
+                    alert("Search Content Should Not Be Empty!");
+                    return;
+                }
+                else{
+
+               location.href='/search/'+keyword;
+                }
+              }
             </script>
             <button type="button" onclick="searchForCommodity()" id="search" class="btn btn-default">Search</button>
             </form>
           <ul class="nav navbar-nav navbar-right">
 
             {% if UserAccount %}
-              <!-- <li>
-                <a href="/myinfo">Account</a>
-              </li> -->
+              <li>
+                <a style="color:#fff" href="/myinfo">Account</a>
+              </li>
             <li>
               <a href="/logout/" style = "color:#fff">Logout</a>
             </li>
@@ -160,7 +174,7 @@
       <div class="container" >
         <div class="row clearfix" >
           <div class="col-md-4 column ui-sortable" style="">
-            <h4 style = "color:#4491E4">Follow Us</h4>
+            <h4 style = "color:#4491E4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Follow Us</h4>
             <!--   <ul class="flickr clearfix"></ul>  -->
             <ul class="menu-widget"   style="color:black;">
               <li><img class="mim-bottom" src="/file/images/fba.png" /><img class="mim-top" src="/file/images/fb.png" /><a class="follow-widget">Facebook</a></li>
@@ -168,10 +182,15 @@
               <li><img class="mim-bottom" src="/file/images/twa.png" /><img class="mim-top" src="/file/images/tw.png" /><a class="follow-widget">Twitter</a></li>
             </ul>
           </div>
-         <!--  <div class="col-md-4 column ui-sortable" style="">
+          <div class="col-md-4 column ui-sortable" style="">
+            <h4 style = "color:#4491E4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Friendship link</h4>
+            <ul class="menu-widget"   style="color:black;">
+              <li><a class="follow-widget">www.taobao.com</a></li>
+              <li><a class="follow-widget">www.tmall.com</a></li>
+              <li><a class="follow-widget">www.jd.com</a></li>
+            </ul>
+          </div>
             
-          </div> -->
-
           <div class="col-md-4 column ui-sortable" style="">
             <h4 style = "color:#4491E4">Address</h4>
             <address>
