--- a/anybuy/base_template/sellerbase.html
+++ b/anybuy/base_template/sellerbase.html
@@ -112,7 +112,7 @@
 		</div>
 	</div>
  <hr>
-    <div class="row clearfix">
+    <!-- <div class="row clearfix">
 		<div class="col-md-12 column">
         <h3 style="color:#3a87ad">
         Recommend commodity
@@ -124,6 +124,6 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
 		{% endfor %}
         </div>
-	</div>
+	</div> -->
 </div>
 {% endblock %}
