--- a/anybuy/base_template/sellerbase.html
+++ b/anybuy/base_template/sellerbase.html
@@ -111,7 +111,7 @@
 		<div class="col-md-4 column">
 		</div>
 	</div>
- <hr>
+ <!-- <hr>
     <div class="row clearfix">
 		<div class="col-md-12 column">
         <h3 style="color:#3a87ad">
@@ -124,6 +124,6 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
 		{% endfor %}
         </div>
-	</div>
+	</div> -->
 </div>
 {% endblock %}
