--- a/anybuy/base_template/base.html
+++ b/anybuy/base_template/base.html
@@ -60,7 +60,7 @@
             });
         </script>
   </head>
-  <body>
+  <body style="width: 1500px">
     <header>
       <nav class="navbar navbar-default navbar-static-top" role="navigation"  style = "background-color: #005b7d">
         <div class="navbar-header">
