--- a/anybuy/base_template/base.html
+++ b/anybuy/base_template/base.html
@@ -96,7 +96,7 @@
           </ul>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
-              <input type="text" id="keyword" class="form-control">
+              <input type="text" id="keyword" class="form-control" maxlength="10">
             </div>
             <script language="javascript">
             /*删除两端的空格
